--- a/src/main/resources/exercises/templates/d1e2.html
+++ b/src/main/resources/exercises/templates/d1e2.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <!-- TODO: in the h1 below, use thymeleaf to inject the value of `message` -->
-    <h1>REPLACE_ME</h1>
+    <!-- in the h1 below, use thymeleaf to inject the value of `message` -->
+    <h1 th:text="${msg}"></h1>
   </body>
 </html>
