--- a/src/main/resources/exercises/templates/d1e3.html
+++ b/src/main/resources/exercises/templates/d1e3.html
@@ -10,7 +10,7 @@
     <h1>Shopping list</h1>
 
     <ul>
-      <!-- TODO: loop through `shopping` and render each item inside a <li> element -->
+      <li th:each="item : ${list}" th:text=${item}></li>
     </ul>
   </body>
 </html>
