--- a/src/main/resources/exercises/templates/d2e1.html
+++ b/src/main/resources/exercises/templates/d2e1.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <h1>Welcome to day 2!</h1>
-    <div>
-      <!-- TODO: Insert the partial marketing.html here -->
-    </div>
+    <h1>Welcome to day 2!!</h1>
+      <div th:replace="fragments :: marketing"></div>
   </body>
 </html>
