--- a/src/main/resources/exercises/templates/d2e3.html
+++ b/src/main/resources/exercises/templates/d2e3.html
@@ -12,5 +12,15 @@
     TODO:
     - create a form which posts to the '/submit' endpoint
     - it should send a "name" and an "email"
-  --></body>
+  -->
+    <form action="/submit" method="POST">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" />
+      <p></p>
+      <label for="email">Enter your email address:</label><br />
+      <input type="email" id="email" name="email" />
+    
+      <button type="submit">Submit it!</button>
+    </form>
+  </body>
 </html>
